--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,8 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+
+# Intelij IDEA and Mac OS
+.idea
+.DS_Store
